--- a/admin.css
+++ b/admin.css
@@ -3,11 +3,11 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    height: 100%;
+    height: 90%;
     background-color: #f1f1f1;
 }
-
-li a {
+li a{
+    
     display: block;
     color: #000;
     padding: 8px 0 8px 16px;
@@ -18,4 +18,6 @@ li a {
 li a:hover {
     background-color: #555;
     color: white;
+}a{
+    font-family: 'Fjalla One', sans-serif;
 }
