--- a/admin.css
+++ b/admin.css
@@ -1,16 +1,17 @@
-ul {
+
+ol {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 200px;
-    height: 90%;
+    height: 100%;
     background-color: #f1f1f1;
 }
 li a{
     
     display: block;
     color: #000;
-    padding: 8px 0 8px 16px;
+    padding: 20px 0 8px 25px;
     text-decoration: none;
 }
 
@@ -18,6 +19,12 @@ li a{
 li a:hover {
     background-color: #555;
     color: white;
-}a{
-    font-family: 'Fjalla One', sans-serif;
+}a.textred{
+    color:red;
+}
+div {
+    
+    width: 0;
+    padding: 0;
+    margin: 0;
 }
